--- a/skeleton-main/client/src/components/pages/Profile.css
+++ b/skeleton-main/client/src/components/pages/Profile.css
@@ -1,3 +1,16 @@
+@keyframes zoomOutAnimation {
+  from {
+    transform: scale(6);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
+.zoom-out {
+  animation: zoomOutAnimation 1s ease forwards;
+}
+
 .Profile-container {
   display: flex;
   flex-direction: row;
@@ -205,6 +218,8 @@ body {
 }
 
 .outermost-flex {
+  /* animation: zoomOutAnimation 1s ease forwards; */
+  transform-origin: 52% 63%;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
