--- a/skeleton-main/client/src/components/pages/SearchBooks.css
+++ b/skeleton-main/client/src/components/pages/SearchBooks.css
@@ -536,13 +536,22 @@ body {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: var(--lightpurple);
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  top: 44px;
   padding: 12px 16px;
+  left: 60%;
+  transform: translateX(-60%);
   z-index: 1;
+  border-radius: 10px;
 }
 
 .dropdown:hover .dropdown-content {
   display: block;
+}
+
+.dropdown-content .dark-btn {
+  width: 100%;
+  white-space: nowrap;
+  margin: 10px 0;
 }
