--- a/skeleton-main/client/src/components/pages/Landing.css
+++ b/skeleton-main/client/src/components/pages/Landing.css
@@ -158,6 +158,8 @@ a {
 
 .front {
   transform: rotateY(-16deg) translateZ(8px);
+    /* create rounded corners */
+    border-radius: 15px;
 }
 
 .page li:nth-child(1) {
@@ -192,12 +194,14 @@ a {
   width: 100%;
   height: 100%;
   transform-style: preserve-3d;
+  border-radius: 15px;
 }
 .page {
   position: absolute;
   width: 100%;
   height: 100%;
   transform-style: preserve-3d;
+  border-radius: 15px;
 }
 
 .front,
