--- a/skeleton-main/client/src/components/pages/Profile.css
+++ b/skeleton-main/client/src/components/pages/Profile.css
@@ -219,6 +219,7 @@ body {
 
 .outermost-flex {
   /* animation: zoomOutAnimation 1s ease forwards; */
+  /* transform: scale(5); */
   transform-origin: 52% 63%;
   display: flex;
   flex-direction: row;
