--- a/skeleton-main/client/src/utilities.css
+++ b/skeleton-main/client/src/utilities.css
@@ -23,6 +23,8 @@
   --white: #fff;
   --grey: #dddddd;
   --brown: #754c24;
+  --darkbrown: #42210b;
+  --medbrown: #603813;
 
   --xs: 4px;
   --s: 8px;
