--- a/skeleton-main/client/src/components/pages/SearchBooks.css
+++ b/skeleton-main/client/src/components/pages/SearchBooks.css
@@ -86,6 +86,7 @@ body {
   cursor: pointer;
   transition: background-color 0.3s ease;
   transition: transform 0.3s ease;
+  border-radius: 1vw;
 }
 .card:hover {
   transform: scale(1.07);
@@ -94,6 +95,7 @@ body {
 .card img {
   height: 20vw;
   width: 14vw;
+  border-radius: 1vw;
 }
 
 .top {
@@ -316,6 +318,7 @@ body {
 }
 
 .BookModal .book {
+  border-radius: 1vh;
   position: relative;
   width: 60vh;
   height: 80vh;
@@ -323,10 +326,12 @@ body {
 }
 
 .book-icon img {
+  border-radius: 1vh;
   width: 20vw;
   height: auto;
   max-height: 75vh;
   margin-top: 5x;
+  image-rendering: -webkit-optimize-contrast;
 }
 
 .BookModal .img {
@@ -397,30 +402,38 @@ body {
 
 .BookModal .front {
   transform: rotateY(-16deg) translateZ(8px);
+  /*rounded corners*/
+  border-radius: 15px;
 }
 
 .BookModal .page li:nth-child(1) {
+  border-radius: 15px;
   transform: rotateY(-15deg);
 }
 
 .BookModal .page li:nth-child(2) {
+  border-radius: 15px;
   transform: rotateY(-14deg);
 }
 
 .BookModal .page li:nth-child(3) {
+  border-radius: 15px;
   transform: rotateY(-13deg);
 }
 
 .BookModal .page li:nth-child(4) {
+  border-radius: 15px;
   transform: rotateY(-12deg);
 }
 
 .BookModal .page li:nth-child(5) {
+  border-radius: 15px;
   transform: rotateY(-11deg);
 }
 
 .back {
   transform: rotateY(-10deg) translateZ(-8px);
+  border-radius: 15px;
 }
 
 .BookModal .front,
@@ -431,6 +444,7 @@ body {
   width: 100%;
   height: 100%;
   transform-style: preserve-3d;
+  border-radius: 15px;
 }
 
 .BookModal .page {
@@ -438,6 +452,7 @@ body {
   width: 100%;
   height: 100%;
   transform-style: preserve-3d;
+  border-radius: 15px;
 }
 
 .BookModal .front,
