--- a/skeleton-main/client/src/components/modules/Feed.css
+++ b/skeleton-main/client/src/components/modules/Feed.css
@@ -14,22 +14,58 @@
 }
 
 .name-container {
-  padding: 3vh;
+  padding-left: 0.5vw;
   display: flex;
   align-items: center; /* This will vertically center the text within the title area */
   justify-content: flex-start; /* Align text to the start */
+  flex: 10;
+}
+
+.name-style {
   font-family: "Readex Pro";
   color: var(--lightpurple);
   font-weight: bold;
-  font-size: 1.8vh;
-  flex: 12;
+  font-size: 1.2vw;
+}
+
+.titlebook {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-family: "Readex Pro";
+  color: var(--darkpurple);
+  font-weight: bold;
+  /* font-size: 2.3vw; */
+  font-size: 5vh;
+}
+
+.authorbook {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-family: "Readex Pro";
+  color: var(--darkpurple);
+  font-weight: 500;
+  /* font-size: 1.4vw; */
+  font-size: 3.5vh;
+}
+.status {
+  padding-left: 0.3vw;
+  font-family: "Readex Pro";
+  color: var(--lightpurple);
+  font-weight: 400;
+  font-size: 1.2vw;
 }
 
 .post-container {
   display: flex;
   flex-direction: column;
-  width: 60%;
-  height: 40vh;
+  width: 50vw;
+  height: 55vh;
   background-color: var(--white);
   margin: 3vh auto;
   border-radius: 25px;
@@ -42,65 +78,128 @@
   justify-content: flex-start;
   flex-direction: row;
   padding: 4vh;
-  width: 100%;
   height: 4vh;
   background-color: var(--darkpurple);
   /* background-color: var(--lightpurple); */
   border-top-left-radius: 25px;
   border-top-right-radius: 25px;
 }
-/* 
-.post-bar {
-  padding: 1vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  background-color: var(--lightpurple);
-} */
 
 .post-bottom-bar {
-  padding: 1vh 3vh;
-  height: 10vh;
+  height: 12vh;
   border-bottom-left-radius: 25px;
   border-bottom-right-radius: 25px;
   background-color: var(--darkpurple);
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  width: 100%;
+  flex: 1;
+  padding: 2vh 2vh 2vh 4vh;
 }
-
+/* 
 .buttons-container {
-  /* background-color: green; */
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: flex-start;
+  flex: 3;
   width: 100%;
   height: 100%;
-  /* margin-left: 1vh; */
+  background-color: red;
+} */
+
+.buttons-container2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
   flex: 3;
+  /* background-color: red; */
 }
 
 .post-center {
-  flex: 1;
-  padding: 0vh 5vh;
+  flex: 4;
+  height: 100%;
+  padding: 2vh 3vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
 }
 
-.react-img img {
-  height: 4vh;
-  /* padding-right: 1vh; */
-  transition: transform 1s ease;
+.post-center-left {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex: 6;
+  padding-right: 2vh;
 }
 
-.react-img {
+.post-center-right {
+  flex: 1.5;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
-  /* margin-right: 10px; */
-  flex-shrink: 0;
+  justify-content: center;
+  /* background-color: red; */
+  width: 100%;
+}
+.react-img img {
+  height: 4vh;
+  transition: transform 1s ease;
+}
+.rating-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  flex: 4;
+  flex-direction: row;
+  justify-content: center;
+}
+.star {
+  height: 2vw;
+  width: 2vw;
+  padding: 0 0.5vh;
+}
+
+.img-book img {
+  height: 20vh;
+  width: auto;
+}
+
+.reviewbook {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding-top: 0.3vw;
+  padding-bottom: 0.3vw;
+  font-family: "Readex Pro";
+  color: var(--darkpurple);
+  font-weight: 350;
+  font-size: 2.4vh;
+}
+
+.see-review {
+  font-family: "Readex Pro";
+  font-weight: bold;
+  background-color: var(--darkpurple);
+  color: var(--white);
+  border: none;
+  font-size: 0.8vw;
+  border-radius: 15px;
+  padding: 6px;
+  cursor: pointer;
+  transition: color 0.3s ease;
+  transition: background-color 0.3s ease;
+}
+
+.see-review:hover {
+  background-color: var(--lightpurple);
+  color: var(--darkpurple);
+}
+.react-img {
   padding-right: 5vh;
-  /* padding: 5px; */
   transition: transform 0.3s ease;
 }
 
@@ -111,8 +210,6 @@
 }
 
 .image-container {
-  align-items: center;
-  justify-content: center;
   position: relative;
   height: 4vh;
   width: 4vh;
@@ -120,7 +217,6 @@
 
 .image-container img {
   position: absolute;
-
   top: 0;
   left: 0;
   transition: opacity 0.3s ease;
@@ -134,7 +230,7 @@
 
 .react-img:hover .image-container img.hover-img {
   opacity: 1;
-  transform: scale(1.1);
+  transform: scale(1.2);
 }
 .react-img .default-img {
   transition: transform 0.3s ease, opacity 0.3s ease;
@@ -149,39 +245,23 @@
   opacity: 0;
 }
 
-.react-btn {
-  font-family: "Readex Pro";
-  color: var(--lightpurple);
-  border: none;
-  background: none;
-  cursor: pointer;
-  font-weight: bold;
-  font-size: 500;
-
-  margin-left: 1.5vh;
-
-  transition: color 0.3s ease, transform 0.3s ease;
-}
-
-.react-btn:hover {
-  color: var(--darkpurple);
-  transform: scale(1.1);
-}
-
 .comment-btn {
   margin-left: 3.6vh;
 }
 
+.likes-container {
+  padding-top: 1vh;
+  flex: 2;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  /* background-color: green; */
+  width: 100%;
+}
+
 .likes-style {
   font-family: "Readex Pro";
-  font-weight: 100;
   color: var(--lightpurple);
-  align-items: center;
-  /* background-color: red; */
-  /* margin-left: 1vh; */
-  margin-bottom: 1vh;
-  font-size: 2.4vh;
-  flex: 1;
-  width: 100%;
-  height: 100%;
+  font-weight: 400;
+  font-size: 2vh;
 }
