--- a/skeleton-main/client/src/components/pages/Home.css
+++ b/skeleton-main/client/src/components/pages/Home.css
@@ -1,15 +1,12 @@
 .Home-container {
   flex-direction: row;
   display: flex;
-  width: 100%;
+  width: 100vw;
   justify-content: space-between;
 }
-
 .Feed-flex {
   padding: 3vh 0vh;
-  flex: 4; /* Increased from 3 to 4 */
-  /* min-width: 60vw; */
-  /* width: 60vw; */
+  flex: 4;
   background-color: var(--grey);
 }
 
@@ -17,12 +14,24 @@
   font-family: "Readex Pro";
   color: var(--darkpurple);
   font-size: 3.5vh;
-  font-weight: 500;
+  font-weight: bold;
+  margin-bottom: 1vh;
 }
 
 .Friends-flex {
   padding: 3vh 4vh;
-  flex: 1;
-  /* max-width: 200px; Example maximum width */
+  flex: 1.13;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
   background-color: var(--white);
+}
+
+.line {
+  height: 2px;
+  margin: 2vh 0vh 2vh 0vh;
+  background-color: var(--darkpurple);
+  width: 30%;
+  min-width: 250px;
 }
