--- a/skeleton-main/client/src/components/pages/SearchBooks.css
+++ b/skeleton-main/client/src/components/pages/SearchBooks.css
@@ -56,8 +56,7 @@ body {
   height: 35px;
 }
 
-.container {
-  display: flex;
+.gridcontainer {
   align-items: center;
   justify-content: center;
   justify-items: center;
@@ -126,7 +125,7 @@ body {
   justify-content: center;
   padding: 0.7vw 0vw;
 }
-.title {
+.gridtitle {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2; /* Number of lines you want */
@@ -326,7 +325,7 @@ body {
   transform-style: preserve-3d;
 }
 
-.book-icon img {
+.bookmodal-icon img {
   border-radius: 1vh;
   width: 20vw;
   height: auto;
