--- a/skeleton-main/client/src/components/pages/Home.css
+++ b/skeleton-main/client/src/components/pages/Home.css
@@ -1,13 +1,14 @@
 .Home-container {
   flex-direction: row;
   display: flex;
-  width: 100vw;
+  width: 100%;
   justify-content: space-between;
 }
 .Feed-flex {
   padding: 3vh 0vh;
   flex: 4;
   background-color: var(--grey);
+  min-height: 100vh;
 }
 
 .Friends-header {
@@ -20,7 +21,8 @@
 
 .Friends-flex {
   padding: 3vh 4vh;
-  flex: 1.13;
+  min-height: 100vh;
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
