--- a/skeleton-main/client/src/components/pages/Home.css
+++ b/skeleton-main/client/src/components/pages/Home.css
@@ -4,6 +4,7 @@
   width: 100%;
   justify-content: space-between;
 }
+
 .Feed-flex {
   padding: 3vh 0vh;
   flex: 4;
@@ -12,6 +13,8 @@
 }
 
 .Friends-header {
+  display: flex;
+  justify-content: center;
   font-family: "Readex Pro";
   color: var(--darkpurple);
   font-size: 3.5vh;
@@ -25,8 +28,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
+  align-items: center;
   background-color: var(--white);
 }
 
