--- a/skeleton-main/client/src/components/modules/UserCard.css
+++ b/skeleton-main/client/src/components/modules/UserCard.css
@@ -8,6 +8,7 @@
   align-items: center;
   padding: 0vh 1vh;
   border-radius: 50px;
+  margin-bottom: 2vh;
   cursor: pointer;
   transition: background-color 0.3s ease;
   transition: transform 0.3s ease;
